prog/dftb+/api/mm/dftbplus.h

/**
 * Type containing the DFTB+ calculator.
 *
 * Used by DFTB+ as an opaque handler. Do not manipulate the content of this type directly!
 */
typedef struct DftbPlus {
  void * pDftbPlus;
} DftbPlus;
/**
 * Type containing the data to be passed from FMO DFTB phase 1 to phase 2
 *
 * Used by DFTB+ as an opaque handler. Do not manipulate the content of this type directly!
 */
typedef struct DftbPlusPhase1{
  void *pDftbPlusPhase1;
} DftbPlusPhase1;
/**
 * Queries the nr. of atoms in the system.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \return Nr. of atoms
 */
int dftbp_get_nr_atoms(DftbPlus *instance);
/**
 * Queries the energy of the current geometry
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] mermin_energy  Mermin free energy of the current geometry. Unit: Bohr.
 */
void dftbp_get_energy(DftbPlus *instance, double *mermin_energy);
/**
 * Queries the gradients of the current geometry.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] gradients Gradients (not forces!) on each atom. Shape [natom, 3]. Unit: Hartree/Bohr.
 */
void dftbp_get_gradients(DftbPlus *instance, double *gradients);
/**
 * Queries the stress tensor of the current periodic box
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] stresstensor Stress Tensor for the periodic box. Shape [3, 3]. Unit: Pascals.
 */
void dftbp_get_stress_tensor(DftbPlus *instance, double *stresstensor);
/**
 * Queries the net populations on the atoms.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] charges Net charges on each atom.  Shape [natom]. Sign convention: Electron has
 *     negative charge, so negative values indicate electron excess.
 */
void dftbp_get_gross_charges(DftbPlus *instance, double *charges);
/**
 * Queries the nr. of orbitals in the system.
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \return Nr. of orbitals
 */
int dftbp_get_nr_orbitals(DftbPlus *instance);
/**
 * Queries the eigenvalues / orbital energies
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] eigVal Eigenvalues of orbitals.  Shape [norb]. Unit: Hartree
 */
void dftbp_get_eigenvalues(DftbPlus *instance, double *eigVal);
/**
 * Queries the eigenvalues / orbital energies
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] eigVec Eigenvectors / coefficients of orbitals.  Shape [norb,norb].
 */
void dftbp_get_eigenvectors(DftbPlus *instance, double *eigVec);
/**
 * Queries the eigenvalues / orbital energies
 *
 * \param[inout] instance Handler of the DFTB+ instance.
 *
 * \param[out] hamil Self-consistent Hamiltonian matrix.  Shape [norb,norb].
 *
 * \param[out] overl Overlap matrix.  Shape [norb,norb].
 */
void dftbp_get_hamil_overl(DftbPlus *instance, double *hamil, double *overl);
void dftbp_get_pointers_phase1(DftbPlus *instance, DftbPlusPhase1 *phase1);
void dftbp_init_pointers_phase1(DftbPlus *instance, int *nSite);
void dftbp_set_pointers_phase1(DftbPlus *instance, int *iSite, DftbPlusPhase1 *phase1, int *nFO, int *iHOMO);
void dftbp_get_fmo_hamiltonian(DftbPlus *instance, int *nFO, double *TijOrtho);