prog/dftb+/api/mm/capi.F90


  !> Obtain nr. of atoms.
  function c_DftbPlus_nrOfAtoms(handler) result(nAtom) bind(C, name='dftbp_get_nr_atoms')
    type(c_DftbPlus), intent(inout) :: handler
    integer(c_int) :: nAtom

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()

  end function c_DftbPlus_nrOfAtoms


  !> Obtain the DFTB+ energy
  subroutine c_DftbPlus_getEnergy(handler, merminEnergy) bind(C, name='dftbp_get_energy')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> resulting energy
    real(c_double), intent(out) :: merminEnergy

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    call instance%getEnergy(merminEnergy)

  end subroutine c_DftbPlus_getEnergy


  !> Obtain the gradients wrt DFTB atom positions
  subroutine c_DftbPlus_getGradients(handler, gradients) bind(C, name='dftbp_get_gradients')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> gradients, row major format
    real(c_double), intent(out) :: gradients(3, *)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%getGradients(gradients(:, 1:nAtom))

  end subroutine c_DftbPlus_getGradients


  !> Obtain the stress tensor of the periodic system
  subroutine c_DftbPlus_getStressTensor(handler, stresstensor)&
      & bind(C, name='dftbp_get_stress_tensor')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> gradients, row major format
    real(c_double), intent(out) :: stresstensor(3, 3)

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)

    call instance%getStressTensor(stresstensor(:, 1:3))

  end subroutine c_DftbPlus_getStressTensor


  !> Obtain gross (Mulliken) charges for atoms wrt to neutral references
  subroutine c_DftbPlus_getGrossCharges(handler, atomCharges)&
      & bind(C, name='dftbp_get_gross_charges')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> resulting atomic charges
    real(c_double), intent(out) :: atomCharges(*)

    type(TDftbPlusC), pointer :: instance
    integer :: nAtom

    call c_f_pointer(handler%instance, instance)
    nAtom = instance%nrOfAtoms()
    call instance%getGrossCharges(atomCharges(1:nAtom))

  end subroutine c_DftbPlus_getGrossCharges


  !> Obtain nr. of orbitals
  function c_DftbPlus_nrOfOrbitals(handler) result(nOrb) bind(C, name='dftbp_get_nr_orbitals')
    type(c_DftbPlus), intent(inout) :: handler
    integer(c_int) :: nOrb

    type(TDftbPlusC), pointer :: instance

    call c_f_pointer(handler%instance, instance)
    nOrb = instance%nrOfOrbitals()

  end function c_DftbPlus_nrOfOrbitals


  !> Obtain the DFTB+ eigenvalues (orbital energies)
  subroutine c_DftbPlus_getEigenValues(handler, eigVal)&
      & bind(C, name='dftbp_get_eigenvalues')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> returned eigenvalues
    real(c_double), intent(out) :: eigVal(:)

    type(TDftbPlusC), pointer :: instance
    integer :: nOrb

    call c_f_pointer(handler%instance, instance)
    nOrb = instance%nrOfOrbitals()
    call instance%getEigenValues(eigVal(1:nOrb))

  end subroutine c_DftbPlus_getEigenValues


  !> Obtain the DFTB+ eigenvectors (coefficients of orbitals)
  subroutine c_DftbPlus_getEigenVectors(handler, eigVec)&
      & bind(C, name='dftbp_get_eigenvectors')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> returned eigenvectors
    real(c_double), intent(out) :: eigVec(:,:)

    type(TDftbPlusC), pointer :: instance
    integer :: nOrb

    call c_f_pointer(handler%instance, instance)
    nOrb = instance%nrOfOrbitals()
    call instance%getEigenVectors(eigVec(1:nOrb,1:nOrb))

  end subroutine c_DftbPlus_getEigenVectors


  !> Obtain the DFTB+ self-consistent Hamiltonian and overlap matrices
  subroutine c_DftbPlus_getHamilOverl(handler, hamil, overl)&
      & bind(C, name='dftbp_get_hamil_overl')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> returned Hamiltonian
    real(c_double), intent(out) :: hamil(:,:)

    !> returned overlap
    real(c_double), intent(out) :: overl(:,:)

    type(TDftbPlusC), pointer :: instance
    integer :: nOrb

    call c_f_pointer(handler%instance, instance)
    nOrb = instance%nrOfOrbitals()
    call instance%getHamilOverl(hamil(1:nOrb,1:nOrb), overl(1:nOrb,1:nOrb))

  end subroutine c_DftbPlus_getHamilOverl


  !> Obtain the pointers to DFTB+ data (phase 1 of the FMO calculation)
  subroutine c_DftbPlus_getPointersToPhase1(handler, ptrsPhase1)&
      & bind(C, name='dftbp_get_pointers_phase1')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> returned pointer to phase 1 data structure
    type(c_PointerToPhase1), intent(out) :: ptrsPhase1

    type(TDftbPlusC), pointer :: instance
    type(TPointersToPhase1), pointer :: phase1

    call c_f_pointer(handler%instance, instance)
    allocate(phase1)

    ! COPY THE DATA
    call instance%getPointersToPhase1(phase1)

    ptrsPhase1%instance = c_loc(phase1)

  end subroutine c_DftbPlus_getPointersToPhase1


  !> Set the number of sites for DFTB phase 2 calculation
  subroutine c_DftbPlus_initPointersToPhase1(handler, nSiteC)&
      & bind(C, name='dftbp_init_pointers_phase1')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> number of sites / fragments for FMO
    integer(c_int), intent(in) :: nSiteC

    type(TDftbPlusC), pointer :: instance
    integer :: nSite

    call c_f_pointer(handler%instance, instance)
    nSite = nSiteC
    call instance%initPointersToPhase1(nSite)

  end subroutine c_DftbPlus_initPointersToPhase1


  !> This is called before starting the phase 2 of the FMO calculation:
  !> Set the pointers to data from the phase 1 of the FMO DFTB+ calculation
  subroutine c_DftbPlus_setPointersToPhase1(handler, iSiteC, ptrsPhase1, nFOc, iHOMOc)&
      & bind(C, name='dftbp_set_pointers_phase1')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> ordinal number of the site / fragment
    integer(c_int), intent(in) :: iSiteC

    !> pointer to phase 1 data structure
    type(c_PointerToPhase1), intent(in) :: ptrsPhase1

    !> communicated from Gromacs: number of fragment orbitals to be considered
    integer(c_int), intent(in) :: nFOc

    !> communicated from Gromacs: index of HOMO in the array of orbitals
    integer(c_int), intent(in) :: iHOMOc

    type(TDftbPlusC), pointer :: instance
    type(TPointersToPhase1), pointer :: phase1
    integer :: iSite, nFO, iHOMO

    call c_f_pointer(handler%instance, instance)
    call c_f_pointer(ptrsPhase1%instance, phase1)
    iSite = iSiteC + 1 ! C-arrays start at 0 but Fortran-arrays start at 1
    nFO = nFOc
    iHOMO = iHOMOc

    ! COPY THE DATA

  ! call instance%setPointersToPhase1(iSite, phase1%nAtom, phase1%nOrb, phase1%nFO, phase1%iHOMO,&
  !     & phase1%denseOver, phase1%denseH0, phase1%eigVec, phase1%eigVal, phase1%qInput,&
  !     & phase1%chargePerShell)
    call instance%setPointersToPhase1(iSite, phase1, nFO, iHOMO)

  end subroutine c_DftbPlus_setPointersToPhase1


  !> Run phase 2 of the DFTB FMO calculation
  subroutine c_DftbPlus_getFragmentBasedHamiltonian(handler, nFOc, TijOrthoC)&
      & bind(C, name='dftbp_get_fmo_hamiltonian')

    !> handler for the calculation
    type(c_DftbPlus), intent(inout) :: handler

    !> number of FMO orbitals (dimension of the resulting Hamiltonian)
    integer(c_int), intent(in) :: nFOc

    !> resulting FMO Hamiltonian matrix
    real(c_double), dimension(nFOc,nFOc), intent(out) :: TijOrthoC

    type(TDftbPlusC), pointer :: instance
    integer :: nFO
    real(dp), allocatable :: TijOrtho(:,:)

    call c_f_pointer(handler%instance, instance)
    nFO = nFOc
    allocate(TijOrtho(nFO,nFO))
    call instance%getFragmentBasedHamiltonian(TijOrtho)
    write (*,*) 'TijOrthoC', shape(TijOrthoC)
    write (*,*) 'TijOrtho ', shape(TijOrtho)
    TijOrthoC(:,:) = TijOrtho
    deallocate(TijOrtho)

  end subroutine c_DftbPlus_getFragmentBasedHamiltonian


  !> Converts a 0-char terminated C-type string into a Fortran string.
  function fortranChar(cstring, maxlen)

    !> C-type string as array
    character(kind=c_char), intent(in) :: cstring(*)

    !> Maximal string lenght. If C-string is longer, it will be chopped.
    integer, intent(in), optional  :: maxlen

    !> Resulting Fortran string
    character(:, kind=c_char), allocatable :: fortranChar

    integer :: ii, maxlen0

    if (present(maxlen)) then
      maxlen0 = maxlen
    else
      maxlen0 = huge(maxlen0) - 1
    end if

    do ii = 1, maxlen0
      if (cstring(ii) == c_null_char) then
        exit
      end if
    end do
    allocate(character(ii - 1) :: fortranChar)
    fortranChar = transfer(cstring(1 : ii - 1), fortranChar)

  end function fortranChar


end module dftbp_capi
